src/assets/css/app.css
/* ... */
.multi-categories-selector .ant-select-selection--single {
    height: 50px !important;
}
.social-btn {
    display: inline-flex;
    height: 35px;
    align-items: center;
    padding: 0px 15px;
    border: 1px solid;
    border-radius: 6px;
    color: white;
    background: #0091ff;
    cursor: pointer;
}

@media (max-width: 575px) {
    .social-btn {
        font-size: 0.8rem;
    }
}
.cropContainer {
    height: 300px;
}
.company-page-header {
    padding-top: 40px;
    padding-bottom: 40px;
    border-bottom: 1px solid #cccccc;
    border-top: 1px solid #cccccc;
}
.social-wall-container {
    padding-top: 40px;
    padding-bottom: 40px;
    border-top: 1px solid #cccccc;
}
.company-wall-img {
    display: flex;
}
.company-wall-img img {
    width: 85px;
    height: 85px;
    border-radius: 6px;
}
@media (max-width: 575px) {
    .company-wall-img img{
        width: 65px;
        height: 65px;
    }
}

